# boule

./: .azure-pipelines.yml  .codacy.yml  .codecov.yml  .flake8  .gitignore  .mailmap  .stickler.yml  .travis.yml  AUTHORS.md  CITATION.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  latest  license_notice.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml  deploy.yml  docs.yml  publish.yml  pypi.yml  style.yml  test.yml
boule/: __init__.py  _constants.py  _ellipsoid.py  _realizations.py  _sphere.py  _triaxialellipsoid.py  _version.py  _version_generated.py  earth.py  ellipsoid.py  function.py  realizations.py  sphere.py  triaxialellipsoid.py  version.py
boule/tests/: __init__.py  test_ellipsoid.py  test_function.py  test_pymap3d.py  test_sphere.py  test_triaxialellipsoid.py  utils.py
dev/: .buildinfo  changes.html  citing.html  compatibility.html  ellipsoids.html  genindex.html  glossary.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
dev/_modules/: boule.html  index.html
dev/_sources/: changes.rst  changes.rst.txt  citing.rst  compatibility.rst  ellipsoids.rst  glossary.rst  index.rst  index.rst.txt  install.rst  overview.rst  overview.rst.txt  references.rst  references.rst.txt  versions.rst  versions.rst.txt
dev/api/: index.html
dev/ellipsoids/: grs80.html  index.html  mars.html  mercury.html  moon.html  venus.html  wgs84.html
dev/tutorials/: geodetic_to_geocentric.html  index.html  normal_gravity.html  overview.html  sg_execution_times.html
dev/user_guide/: coordinates.html  defining_ellipsoids.html  gravity_disturbance.html  normal_gravity.html
doc/: Makefile  changes.rst  compatibility.rst  conf.py  ellipsoids.rst  glossary.rst  index.rst  install.rst  overview.rst  references.rst  versions.rst
doc/api/: index.rst
doc/ellipsoids/: index.rst  mercury.rst  moon.rst  venus.rst  wgs84.rst
doc/tutorials/: geodetic_to_geocentric.rst  normal_gravity.rst  overview.rst
doc/user_guide/: coordinates.rst  defining_ellipsoids.rst  gravity_disturbance.rst  normal_gravity.rst
env/: requirements-build.txt  requirements-docs.txt  requirements-style.txt  requirements-test.txt
src/boule/: __init__.py  _constants.py  _ellipsoid.py  _sphere.py  (+2 more)
test/: test_ellipsoid.py  test_pymap3d.py  test_sphere.py  test_triaxialellipsoid.py
tools/: license_notice.py
tutorials/: geodetic_to_geocentric.py  gravity_disturbance.py  normal_gravity.py  overview.py
v0.1.0/: changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html
v0.1.1/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.2.0/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
v0.3.0/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.3.1/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.4.0/: .buildinfo  changes.html  citing.html  compatibility.html  ellipsoids.html  genindex.html  glossary.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.4.1/: .buildinfo  changes.html  citing.html  compatibility.html  ellipsoids.html  genindex.html  glossary.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  versions.html
v0.5.0/: changes.html  citing.html  compatibility.html  ellipsoids.html  genindex.html  glossary.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  versions.html
v0.6.0/: .buildinfo  changes.html  citing.html  compatibility.html  ellipsoids.html  genindex.html  glossary.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
(+174 files in other folders)
