[metadata]
name = boule
fullname = Boule
description = Reference ellipsoids for geodesy and geophysics
long_description = file: README.md
long_description_content_type = text/markdown
author = The Boule Developers
author_email = fatiandoaterra@protonmail.com
maintainer = Leonardo Uieda
maintainer_email = leouieda@gmail.com
license = BSD 3-Clause License
license_files = LICENSE.txt
platform = any
keywords = geophysics, geodesy, data
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/fatiando/boule
project_urls =
    Documentation = https://www.fatiando.org/boule
    Release Notes = https://github.com/fatiando/boule/releases
    Bug Tracker = https://github.com/fatiando/boule/issues
    Source Code = https://github.com/fatiando/boule

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19
    pymap3d>=2.9
    attrs>=19.3.0

[flake8]
max-line-length = 88
max-doc-length = 79
ignore =
    # Too many leading '#' for block comment
    E266,
    # Line too long (82 > 79 characters)
    E501,
    # Do not use variables named 'I', 'O', or 'l'
    E741,
    # Line break before binary operator (conflicts with black)
    W503,
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
    doc/_build,
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401

# Configure flake8-rst-docstrings
# -------------------------------
# Add some roles used in our docstrings
rst-roles =
    class,
    func,
    mod,
    meth,
    ref,
# Ignore "Unknown target name" raised on citations
extend-ignore = RST306

# Configure flake8-functions
# --------------------------
# Allow a max of 10 arguments per function
max-parameters-amount = 10
